tests/paczka1/fuzzy1/63676739.err
Error in line 1: XEOnXm6w A240 22,8
Error in line 7: 2xPtbL8 S702 -2,2
Error in line 9: WWP5wr A240 0,3
Error in line 10: WWP5wr S702 37,1
Error in line 6: 2xPtbL8 S702 89,9
Error in line 4: XEOnXm6w S702 8,1
Error in line 36: S533 A240 88,1
